[package]
name = "urlpattern"
version = "0.1.0"
edition = "2024"
authors = ["방성범 (Bang Seongbeom) <bangseongbeom@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.8.2" }
rb-sys = { version = "0.9", features = ["stable-api-compiled-fallback"] }
regex = "1.12.3"
url = "2.5.8"
urlpattern = "0.6.0"

[build-dependencies]
rb-sys-env = "0.2.3"

[dev-dependencies]
rb-sys-test-helpers = { version = "0.3.0" }
